--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "strat": "node main.js"
+    "start": "node main.js"
   },
   "author": "",
   "license": "ISC"
